--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         @keyframes slideIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
-<body class="text-slate-800">
-    <div id="root"></div>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>日益智慧能源 - 異常紀錄系統</title>
+    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="icon" href="logo.png">
     <script type="text/babel">
         const { useState, useEffect } = React;
 
