--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>日益智慧能源 - 異常紀錄系統</title>
     
-    <link rel="apple-touch-icon" href="logo.png">
-    <link rel="icon" href="logo.png">
+    <link rel="apple-touch-icon" href="app-logo.png">
+    <link rel="icon" href="app-logo.png">
 
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
@@ -29,11 +29,11 @@
         const App = () => {
             const [status, setStatus] = useState('idle');
             const [formData, setFormData] = useState({
-                'entry.1997557929': '', // 1. 表單編號
-                'entry.131097778': '',  // 2. 案場名稱
-                'entry.980213033': '',  // 3. 區域
-                'entry.327643225': '',  // 4. 實際發生日期
-                'entry.2061708184': ''  // 5. 異常問題
+                'entry.1997557929': '', 
+                'entry.131097778': '',  
+                'entry.980213033': '',  
+                'entry.327643225': '',  
+                'entry.2061708184': ''  
             });
 
             useEffect(() => {
@@ -54,8 +54,6 @@
 
             const handleSubmit = () => {
                 setStatus('submitting');
-
-                // 🚀 發送 LINE 通知 (透過你的 GAS 網址)
                 const gasUrl = "https://script.google.com/macros/s/AKfycbxS7zuTQw8emGzffRjTS-4omSBvr77rQin1wLcr8R7o16VzxBw6Wzf9mMr17ceHP7c/exec";
                 
                 fetch(gasUrl, {
@@ -71,7 +69,6 @@
                     })
                 });
 
-                // 延遲跳轉成功畫面
                 setTimeout(() => {
                     setStatus('submitted');
                     window.scrollTo({ top: 0, behavior: 'smooth' });
@@ -85,9 +82,9 @@
                         <h2 className="text-3xl font-black text-slate-800 mb-4">通報成功！</h2>
                         <p className="text-slate-500 mb-10 text-lg font-medium tracking-tight">
                             編號：<span className="text-sky-600 font-bold">{formData['entry.1997557929']}</span><br/>
-                            資料已同步至 Google 與 LINE。
+                            資料與 LINE 通知已同步。
                         </p>
-                        <button onClick={() => window.location.reload()} className="w-full bg-sky-600 text-white py-5 rounded-3xl font-black text-xl shadow-xl hover:bg-sky-700 active:scale-95 transition-all">下一筆通報</button>
+                        <button onClick={() => window.location.reload()} className="w-full bg-sky-600 text-white py-5 rounded-3xl font-black text-xl shadow-xl active:scale-95 transition-all">下一筆通報</button>
                     </div>
                 </div>
             );
@@ -95,7 +92,7 @@
             return (
                 <div className="min-h-screen pb-12">
                     <header className="bg-gradient-to-br from-slate-900 via-slate-800 to-sky-900 text-white py-14 px-6 text-center shadow-2xl">
-                        <h1 className="text-3xl font-black tracking-widest">日益智慧能源</h1>
+                        <h1 className="text-3xl font-black tracking-widest text-white">日益智慧能源</h1>
                         <p className="text-sky-400 mt-2 font-bold text-sm tracking-[0.3em] uppercase">異常問題紀錄單</p>
                     </header>
 
@@ -116,12 +113,12 @@
 
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg">2. 案場名稱 *</label>
-                                <input required type="text" name="entry.131097778" onChange={(e)=>setFormData({...formData,'entry.131097778':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold transition-all" placeholder="輸入案場名稱" />
+                                <input required type="text" name="entry.131097778" onChange={(e)=>setFormData({...formData,'entry.131097778':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold" placeholder="輸入案場名稱" />
                             </div>
 
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg">3. 區域 *</label>
-                                <input required type="text" name="entry.980213033" onChange={(e)=>setFormData({...formData,'entry.980213033':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold transition-all" placeholder="輸入發生區域" />
+                                <input required type="text" name="entry.980213033" onChange={(e)=>setFormData({...formData,'entry.980213033':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold" placeholder="輸入發生區域" />
                             </div>
 
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
@@ -131,13 +128,12 @@
 
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg">5. 異常問題簡述 *</label>
-                                <textarea required name="entry.2061708184" rows="4" onChange={(e)=>setFormData({...formData,'entry.2061708184':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold transition-all" placeholder="請詳細描述異常內容..."></textarea>
+                                <textarea required name="entry.2061708184" rows="4" onChange={(e)=>setFormData({...formData,'entry.2061708184':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold" placeholder="請詳細描述異常內容..."></textarea>
                             </div>
 
-                            <button type="submit" className="w-full py-6 mt-4 rounded-[2.5rem] bg-slate-900 text-white text-2xl font-black shadow-2xl hover:bg-sky-800 active:scale-95 transition-all">
-                                {status === 'submitting' ? '正在傳送通知...' : '確認提交紀錄'}
+                            <button type="submit" className="w-full py-6 mt-4 rounded-[2.5rem] bg-slate-900 text-white text-2xl font-black shadow-2xl hover:bg-sky-800 transition-all">
+                                {status === 'submitting' ? '正在提交...' : '確認提交紀錄'}
                             </button>
-                            <p className="text-center text-slate-400 text-xs font-bold pt-6 tracking-widest uppercase">© 2026 SPE Maintenance System</p>
                         </form>
                     </main>
                 </div>
