--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>日益智慧能源 - 異常紀錄系統</title>
-    
     <link rel="apple-touch-icon" href="app-logo.png">
     <link rel="icon" href="app-logo.png">
-
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700;900&display=swap');
         body { font-family: 'Noto Sans TC', sans-serif; background-color: #f1f5f9; -webkit-tap-highlight-color: transparent; }
@@ -22,18 +19,18 @@
 </head>
 <body class="text-slate-800">
     <div id="root"></div>
-
     <script type="text/babel">
         const { useState, useEffect } = React;
 
         const App = () => {
             const [status, setStatus] = useState('idle');
             const [formData, setFormData] = useState({
-                'entry.1997557929': '', 
-                'entry.131097778': '',  
-                'entry.980213033': '',  
-                'entry.327643225': '',  
-                'entry.2061708184': ''  
+                'entry.1997557929': '', // 表單編號
+                'entry.user_name': '',   // 填表人 (新增)
+                'entry.131097778': '',  // 案場名稱
+                'entry.980213033': '',  // 區域
+                'entry.327643225': '',  // 日期
+                'entry.2061708184': ''  // 異常問題
             });
 
             useEffect(() => {
@@ -43,11 +40,9 @@
                 const D = String(now.getDate()).padStart(2, '0');
                 const hh = String(now.getHours()).padStart(2, '0');
                 const mm = String(now.getMinutes()).padStart(2, '0');
-                const formID = `${Y}${M}${D}-${hh}${mm}`;
-
                 setFormData(p => ({
                     ...p,
-                    'entry.1997557929': formID,
+                    'entry.1997557929': `${Y}${M}${D}-${hh}${mm}`,
                     'entry.327643225': `${Y}-${M}-${D}`
                 }));
             }, []);
@@ -62,6 +57,7 @@
                     headers: { "Content-Type": "application/x-www-form-urlencoded" },
                     body: new URLSearchParams({
                         "id": formData['entry.1997557929'],
+                        "user": formData['entry.user_name'],
                         "site": formData['entry.131097778'],
                         "area": formData['entry.980213033'],
                         "date": formData['entry.327643225'],
@@ -80,10 +76,6 @@
                     <div className="max-w-md w-full bg-white p-12 rounded-[3rem] shadow-2xl border-t-[15px] border-sky-600 animate-card">
                         <div className="text-7xl mb-6">✅</div>
                         <h2 className="text-3xl font-black text-slate-800 mb-4">通報成功！</h2>
-                        <p className="text-slate-500 mb-10 text-lg font-medium tracking-tight">
-                            編號：<span className="text-sky-600 font-bold">{formData['entry.1997557929']}</span><br/>
-                            資料與 LINE 通知已同步。
-                        </p>
                         <button onClick={() => window.location.reload()} className="w-full bg-sky-600 text-white py-5 rounded-3xl font-black text-xl shadow-xl active:scale-95 transition-all">下一筆通報</button>
                     </div>
                 </div>
@@ -97,38 +89,48 @@
                     </header>
 
                     <main className="max-w-xl mx-auto -mt-10 px-4">
-                        <iframe name="hidden_confirm" style={{display:'none'}}></iframe>
-                        <form 
-                            action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSctQVHtvkom4MQ_iCxMSctMp5cvTN7ZLJSBTPvBV3GBx_1Vmw/formResponse" 
-                            method="POST" 
-                            target="hidden_confirm" 
-                            onSubmit={handleSubmit}
-                            className="space-y-5"
-                        >
+                        <form onSubmit={(e) => { e.preventDefault(); handleSubmit(); }} className="space-y-5">
+                            {/* 編號卡片 */}
                             <div className="bg-white p-6 rounded-[2rem] shadow-lg border-l-[10px] border-amber-500 animate-card">
                                 <label className="block text-slate-400 font-bold mb-1 text-xs tracking-wider uppercase">Form ID</label>
                                 <div className="text-2xl font-black text-slate-700">{formData['entry.1997557929']}</div>
-                                <input type="hidden" name="entry.1997557929" value={formData['entry.1997557929']} />
                             </div>
 
+                            {/* 1. 填表人 (新增) */}
+                            <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
+                                <label className="block text-slate-800 font-black mb-3 text-lg">1. 填表人員 *</label>
+                                <input required type="text" onChange={(e)=>setFormData({...formData,'entry.user_name':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold" placeholder="輸入您的姓名" />
+                            </div>
+
+                            {/* 2. 案場名稱 */}
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg">2. 案場名稱 *</label>
-                                <input required type="text" name="entry.131097778" onChange={(e)=>setFormData({...formData,'entry.131097778':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold" placeholder="輸入案場名稱" />
+                                <input required type="text" onChange={(e)=>setFormData({...formData,'entry.131097778':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold" placeholder="輸入案場名稱" />
                             </div>
 
+                            {/* 3. 區域 (改下拉選單) */}
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
-                                <label className="block text-slate-800 font-black mb-3 text-lg">3. 區域 *</label>
-                                <input required type="text" name="entry.980213033" onChange={(e)=>setFormData({...formData,'entry.980213033':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold" placeholder="輸入發生區域" />
+                                <label className="block text-slate-800 font-black mb-3 text-lg">3. 區域選擇 *</label>
+                                <select required onChange={(e)=>setFormData({...formData,'entry.980213033':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold appearance-none">
+                                    <option value="">請選擇區域</option>
+                                    <option value="北部">北部</option>
+                                    <option value="中部">中部</option>
+                                    <option value="南部">南部</option>
+                                    <option value="東部">東部</option>
+                                    <option value="離島">離島</option>
+                                </select>
                             </div>
 
+                            {/* 4. 實際發生日期 */}
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg">4. 實際發生日期 *</label>
-                                <input required type="date" name="entry.327643225" value={formData['entry.327643225']} onChange={(e)=>setFormData({...formData,'entry.327643225':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl font-bold text-slate-600 shadow-inner" />
+                                <input required type="date" value={formData['entry.327643225']} onChange={(e)=>setFormData({...formData,'entry.327643225':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl font-bold text-slate-600 shadow-inner" />
                             </div>
 
+                            {/* 5. 異常問題簡述 */}
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg">5. 異常問題簡述 *</label>
-                                <textarea required name="entry.2061708184" rows="4" onChange={(e)=>setFormData({...formData,'entry.2061708184':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold" placeholder="請詳細描述異常內容..."></textarea>
+                                <textarea required rows="4" onChange={(e)=>setFormData({...formData,'entry.2061708184':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl focus:border-sky-500 focus:bg-white outline-none font-bold" placeholder="請詳細描述異常內容..."></textarea>
                             </div>
 
                             <button type="submit" className="w-full py-6 mt-4 rounded-[2.5rem] bg-slate-900 text-white text-2xl font-black shadow-2xl hover:bg-sky-800 transition-all">
@@ -139,7 +141,6 @@
                 </div>
             );
         };
-
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
     </script>
