--- a/index.html
+++ b/index.html
@@ -4,33 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>日益智慧能源 - 異常紀錄系統</title>
-    
     <link rel="apple-touch-icon" href="app-logo.png">
     <link rel="icon" href="app-logo.png">
-
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700;900&display=swap');
-        body { 
-            font-family: 'Noto Sans TC', sans-serif; 
-            background-color: #0f172a; /* 深藍色背景 */
-            -webkit-tap-highlight-color: transparent; 
-        }
-        .header-gradient {
-            background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
-            border-bottom: 4px solid #4ade80; /* 能源綠飾條 */
-        }
-        .form-card {
-            background-color: #ffffff;
-            border-radius: 1.5rem;
-            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.3);
-        }
-        .animate-card { animation: slideUp 0.5s ease-out forwards; }
-        @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+        body { font-family: 'Noto Sans TC', sans-serif; background-color: #0f172a; }
+        .header-gradient { background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); border-bottom: 4px solid #4ade80; }
+        .form-card { background-color: #ffffff; border-radius: 1.5rem; box-shadow: 0 10px 25px rgba(0,0,0,0.4); }
+        .input-focus { transition: all 0.3s ease; }
+        .input-focus:focus { border-color: #0369a1; background-color: #fff; box-shadow: 0 0 0 4px rgba(3, 105, 161, 0.1); }
     </style>
 </head>
 <body class="text-slate-800">
@@ -39,14 +25,13 @@
         const { useState, useEffect } = React;
 
         const App = () => {
-            const [status, setStatus] = useState('idle');
             const [formData, setFormData] = useState({
-                'entry.1997557929': '', // 編號
-                'entry.1678700766': '', // 填表人 ID
-                'entry.131097778': '',  // 案場名稱 ID
-                'entry.980213033': '',  // 區域選擇 ID
-                'entry.327643225': '',  // 日期 ID
-                'entry.2061708184': ''  // 異常問題 ID
+                'entry.1997557929': '', 
+                'entry.1678700766': '', 
+                'entry.131097778': '',  
+                'entry.980213033': '',  
+                'entry.327643225': '',  
+                'entry.2061708184': ''  
             });
 
             useEffect(() => {
@@ -63,8 +48,9 @@
                 }));
             }, []);
 
-            const handleNotify = () => {
+            const handleNotifyOnly = () => {
                 const gasUrl = "https://script.google.com/macros/s/AKfycbxS7zuTQw8emGzffRjTS-4omSBvr77rQin1wLcr8R7o16VzxBw6Wzf9mMr17ceHP7c/exec";
+                // 異步發送通知，不等待回傳直接讓表單提交
                 fetch(gasUrl, {
                     method: "POST",
                     mode: "no-cors",
@@ -78,61 +64,41 @@
                         "issue": formData['entry.2061708184']
                     })
                 });
-                setStatus('submitting');
             };
-
-            if (status === 'submitted') return (
-                <div className="min-h-screen flex items-center justify-center p-6 text-center">
-                    <div className="max-w-md w-full bg-white p-12 rounded-[2.5rem] shadow-2xl animate-card">
-                        <div className="text-7xl mb-6">✅</div>
-                        <h2 className="text-3xl font-black text-slate-900 mb-4">通報成功</h2>
-                        <p className="text-slate-500 mb-10 text-lg font-medium">資料已回傳並同步發送 LINE 通知。</p>
-                        <button onClick={() => window.location.reload()} className="w-full bg-sky-700 text-white py-4 rounded-xl font-bold text-xl active:scale-95 transition-all">下一筆通報</button>
-                    </div>
-                </div>
-            );
 
             return (
                 <div className="min-h-screen">
-                    <header className="header-gradient text-white py-16 px-6 text-center shadow-xl">
+                    <header className="header-gradient text-white py-16 px-6 text-center shadow-2xl">
                         <h1 className="text-4xl font-black tracking-widest mb-3">日益智慧能源</h1>
-                        <div className="inline-block px-4 py-1 bg-green-500/20 rounded-full border border-green-500/30">
-                            <p className="text-green-400 font-bold text-sm tracking-widest uppercase">Solar Maintenance System</p>
-                        </div>
+                        <p className="text-green-400 font-bold text-sm tracking-[0.3em] uppercase border border-green-500/30 inline-block px-4 py-1 rounded-full bg-green-500/10">Solar Maintenance System</p>
                     </header>
 
                     <main className="max-w-xl mx-auto -mt-8 px-4 pb-12">
-                        <iframe name="hidden_confirm" style={{display:'none'}} onLoad={() => { if(status === 'submitting') setStatus('submitted'); }}></iframe>
                         <form 
                             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSctQVHtvkom4MQ_iCxMSctMp5cvTN7ZLJSBTPvBV3GBx_1Vmw/formResponse" 
                             method="POST" 
-                            target="hidden_confirm" 
-                            onSubmit={handleNotify}
+                            onSubmit={handleNotifyOnly}
                             className="space-y-6"
                         >
-                            {/* Form ID */}
-                            <div className="form-card p-6 border-l-[10px] border-amber-500 animate-card">
+                            <div className="form-card p-6 border-l-[10px] border-amber-500">
                                 <label className="block text-slate-400 font-bold mb-1 text-xs tracking-wider uppercase">通報編號</label>
                                 <div className="text-2xl font-black text-slate-700">{formData['entry.1997557929']}</div>
                                 <input type="hidden" name="entry.1997557929" value={formData['entry.1997557929']} />
                             </div>
 
-                            {/* 1. 填表人 */}
-                            <div className="form-card p-7 border-l-[10px] border-sky-700 animate-card">
-                                <label className="block text-slate-800 font-black mb-3 text-lg underline decoration-sky-500 decoration-4">1. 填表人員 *</label>
-                                <input required type="text" name="entry.1678700766" value={formData['entry.1678700766']} onChange={(e)=>setFormData({...formData,'entry.1678700766':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-200 rounded-xl focus:border-sky-700 focus:bg-white outline-none font-bold" placeholder="請輸入姓名" />
+                            <div className="form-card p-7 border-l-[10px] border-sky-700">
+                                <label className="block text-slate-800 font-black mb-3 text-lg">1. 填表人員 *</label>
+                                <input required type="text" name="entry.1678700766" onChange={(e)=>setFormData({...formData,'entry.1678700766':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-200 rounded-xl font-bold input-focus" placeholder="請輸入姓名" />
                             </div>
 
-                            {/* 2. 案場名稱 */}
-                            <div className="form-card p-7 border-l-[10px] border-sky-700 animate-card">
-                                <label className="block text-slate-800 font-black mb-3 text-lg underline decoration-sky-500 decoration-4">2. 案場名稱 *</label>
-                                <input required type="text" name="entry.131097778" value={formData['entry.131097778']} onChange={(e)=>setFormData({...formData,'entry.131097778':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-200 rounded-xl focus:border-sky-700 focus:bg-white outline-none font-bold" placeholder="例如：新屋一號案場" />
+                            <div className="form-card p-7 border-l-[10px] border-sky-700">
+                                <label className="block text-slate-800 font-black mb-3 text-lg">2. 案場名稱 *</label>
+                                <input required type="text" name="entry.131097778" onChange={(e)=>setFormData({...formData,'entry.131097778':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-200 rounded-xl font-bold input-focus" placeholder="請輸入案場名稱" />
                             </div>
 
-                            {/* 3. 區域選擇 */}
-                            <div className="form-card p-7 border-l-[10px] border-sky-700 animate-card">
-                                <label className="block text-slate-800 font-black mb-3 text-lg underline decoration-sky-500 decoration-4">3. 區域選擇 *</label>
-                                <select required name="entry.980213033" value={formData['entry.980213033']} onChange={(e)=>setFormData({...formData,'entry.980213033':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-200 rounded-xl focus:border-sky-700 focus:bg-white outline-none font-bold">
+                            <div className="form-card p-7 border-l-[10px] border-sky-700">
+                                <label className="block text-slate-800 font-black mb-3 text-lg">3. 區域選擇 *</label>
+                                <select required name="entry.980213033" onChange={(e)=>setFormData({...formData,'entry.980213033':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-200 rounded-xl font-bold input-focus">
                                     <option value="">請點擊選擇區域</option>
                                     <option value="北部">北部</option>
                                     <option value="中部">中部</option>
@@ -142,20 +108,18 @@
                                 </select>
                             </div>
 
-                            {/* 4. 日期 */}
-                            <div className="form-card p-7 border-l-[10px] border-sky-700 animate-card">
-                                <label className="block text-slate-800 font-black mb-3 text-lg underline decoration-sky-500 decoration-4">4. 發生日期 *</label>
-                                <input required type="date" name="entry.327643225" value={formData['entry.327643225']} onChange={(e)=>setFormData({...formData,'entry.327643225':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-200 rounded-xl font-bold" />
+                            <div className="form-card p-7 border-l-[10px] border-sky-700">
+                                <label className="block text-slate-800 font-black mb-3 text-lg">4. 發生日期 *</label>
+                                <input required type="date" name="entry.327643225" value={formData['entry.327643225']} onChange={(e)=>setFormData({...formData,'entry.327643225':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-200 rounded-xl font-bold input-focus" />
                             </div>
 
-                            {/* 5. 異常描述 */}
-                            <div className="form-card p-7 border-l-[10px] border-sky-700 animate-card">
-                                <label className="block text-slate-800 font-black mb-3 text-lg underline decoration-sky-500 decoration-4">5. 異常問題簡述 *</label>
-                                <textarea required name="entry.2061708184" value={formData['entry.2061708184']} rows="4" onChange={(e)=>setFormData({...formData,'entry.2061708184':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-200 rounded-xl focus:border-sky-700 focus:bg-white outline-none font-bold" placeholder="請簡述異常現況與影響範圍"></textarea>
+                            <div className="form-card p-7 border-l-[10px] border-sky-700">
+                                <label className="block text-slate-800 font-black mb-3 text-lg">5. 異常問題簡述 *</label>
+                                <textarea required name="entry.2061708184" rows="4" onChange={(e)=>setFormData({...formData,'entry.2061708184':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-200 rounded-xl font-bold input-focus" placeholder="請簡述異常內容"></textarea>
                             </div>
 
                             <button type="submit" className="w-full py-6 mt-4 rounded-2xl bg-sky-700 text-white text-2xl font-black shadow-lg hover:bg-sky-800 active:scale-95 transition-all">
-                                {status === 'submitting' ? '提交數據中...' : '提交紀錄並發送 LINE'}
+                                提交紀錄並發送 LINE
                             </button>
                         </form>
                     </main>
