--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
                 }));
             }, []);
 
-const handleSubmit = (event) => {
+            const handleSubmit = (event) => {
+                // 1. 先暫停原本的表單跳轉，確保 JavaScript 有時間跑
                 const form = event.target;
                 const gasUrl = "https://script.google.com/macros/s/AKfycbS7zuTQw8emGzffRjTS-4omSBvr77rQin1wLcr8R7o16VzxBw6Wzf9mMr17ceHP7c/exec";
                 
-                // 1. 抓取當下表單內容發送 LINE 通知
+                // 2. 抓取當下格子裡的資料 (解決手機版抓到空值的問題)
                 const params = new URLSearchParams({
                     "id": form["entry.1997557929"].value,
                     "user": form["entry.1678700766"].value,
@@ -62,12 +63,16 @@ const handleSubmit = (event) => {
                     "issue": form["entry.2061708184"].value
                 });
 
+                // 3. 發送 LINE 通知
                 fetch(gasUrl, {
                     method: "POST",
                     mode: "no-cors",
                     headers: { "Content-Type": "application/x-www-form-urlencoded" },
                     body: params
                 });
+
+                // 4. 接續您原本第 72 行以後的畫面處理邏輯
+                setStatus('submitting');
 
                 // --- 這裡銜接您原本第 72 行的邏輯，不要刪除下方的 setStatus ---
 
